<resources>
    <string name="app_name">jeju-road</string>
    <string name="text_main_toolbar_title">제주도 맛집</string>

    <!-- RestaurantIntroductionView -->
    <string name="text_restaurant_introduction_menu">대표메뉴</string>
    <string name="text_restaurant_introduction_image_count">1 / %d</string>
    <string name="text_restaurant_introduction_image_current_count">%d / %d</string>

    <!-- RestaurantDefaultInformationView -->
    <string name="text_restaurant_default_information_title">기본정보</string>
    <string name="text_restaurant_default_information_address">주소</string>
    <string name="text_restaurant_default_information_phone">전화</string>
    <string name="text_restaurant_default_information_how_to_go">가는방법</string>
    <string name="text_restaurant_default_information_serving_time">이용가능시간, 휴무일</string>
    <string name="text_restaurant_default_information_tips">이곳의 이용팁</string>
    <string name="text_restaurant_default_information_find_load">길찾기</string>
    <string name="text_restaurant_default_information_serving_time_format">오늘 %s %s - %s</string>

    <!-- Error Message-->
    <string name="text_error_button_retry">다시 시도</string>
    <string name="text_error_unException_message">예기치 못한 에러가 발생했어요. \n 잠시 후 다시 시도해주세요.</string>
    <string name="text_error_500_message">서버 연결 상태가 좋지 않습니다.\n 잠시 후 다시 시도해주세요.</string>
    <string name="text_global_error_head_explain">예기치 못한 에러가 발생했어요</string>
    <string name="text_global_error_body_explain">새로 고침을 눌러 페이지를 다시 불러올 수 있습니다.\n 문제가 반복된다면 앱을 다시 실행해주세요.</string>
    <string name="text_global_error_button_retry">새로 고침</string>
</resources>