<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="isExpand"
            type="Boolean" />

        <import type="android.view.View" />
    </data>

    <merge
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:parentTag="android.widget.FrameLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:background="@color/onSurface">

            <TextView
                android:id="@+id/textView_restaurant_default_information_title"
                style="@style/JejuLoadTextStyle.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/restaurant_default_information_title_margin_horizontal"
                android:layout_marginTop="@dimen/restaurant_default_information_title_margin_top"
                android:text="@string/text_restaurant_default_information_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/restaurant_introduction_address_area_margin_horizontal"
                android:layout_marginTop="@dimen/restaurant_introduction_address_area_margin_top"
                android:background="@drawable/bg_radius_10"
                android:backgroundTint="@color/lightGray"
                android:orientation="horizontal"
                android:padding="@dimen/restaurant_introduction_address_area_padding">

                <TextView
                    android:id="@+id/textView_restaurant_default_information_address_title"
                    style="@style/JejuLoadTextStyle.SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_restaurant_default_information_address"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_restaurant_default_information_address"
                    style="@style/JejuLoadTextStyle.Content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/restaurant_default_information_address_margin_start"
                    android:singleLine="true"
                    android:textColor="@color/gray"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textView_restaurant_default_information_address_title"
                    app:layout_constraintTop_toTopOf="@id/textView_restaurant_default_information_address_title"
                    tools:text="제주특별자치도 제주시 서사로 11" />

                <TextView
                    android:id="@+id/textView_restaurant_default_information_phone_title"
                    style="@style/JejuLoadTextStyle.SubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/restaurant_default_information_phone_title_margin_top"
                    android:text="@string/text_restaurant_default_information_phone"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_restaurant_default_information_address_title" />

                <TextView
                    android:id="@+id/textView_restaurant_default_information_phone"
                    style="@style/JejuLoadTextStyle.Content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/restaurant_default_information_phone_margin_start"
                    android:text="+8210-0000-0000"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toBottomOf="@id/textView_restaurant_default_information_phone_title"
                    app:layout_constraintStart_toEndOf="@id/textView_restaurant_default_information_phone_title"
                    app:layout_constraintTop_toTopOf="@id/textView_restaurant_default_information_phone_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/JejuLoadTextStyle.Focus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/restaurant_default_information_find_load_margin_horizontal"
                android:layout_marginTop="@dimen/restaurant_default_information_find_load_margin_top"
                android:background="@drawable/bg_radius_10"
                android:backgroundTint="@color/orangeSubColor"
                android:text="@string/text_restaurant_default_information_find_load"
                android:textAlignment="center"
                android:textColor="@color/onPrimary" />

            <TextView
                style="@style/JejuLoadTextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/restaurant_default_information_how_to_go_title_margin_horizontal"
                android:layout_marginTop="@dimen/restaurant_default_information_how_to_go_title_margin_top"
                android:text="@string/text_restaurant_default_information_how_to_go"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_restaurant_default_information_how_to_go"
                style="@style/JejuLoadTextStyle.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/restaurant_default_information_how_to_go_margin_horizontal"
                android:layout_marginVertical="@dimen/restaurant_default_information_how_to_go_margin_vertical"
                tools:text="동문 재래 시장에서 도보 9분" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/restaurant_default_information_divider_height"
                android:layout_marginHorizontal="@dimen/restaurant_default_information_divider_margin_horizontal"
                android:layout_marginTop="@dimen/restaurant_default_information_divider_margin_top"
                android:background="@android:color/darker_gray" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_restaurant_default_information_serving_time_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/restaurant_default_information_serving_time_area_margin_horizontal"
                android:layout_marginTop="@dimen/restaurant_default_information_serving_time_area_margin_top">

                <ToggleButton
                    android:id="@+id/toggleButton_restaurant_default_information_flip"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/restaurant_default_information_flip_height"
                    android:background="@drawable/bg_open_time_toggle_button"
                    android:checked="true"
                    android:textOff="@null"
                    android:textOn="@null"
                    app:layout_constraintBottom_toBottomOf="@id/textView_restaurant_default_information_serving_time_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textView_restaurant_default_information_serving_time_title"
                    app:layout_constraintTop_toTopOf="@id/textView_restaurant_default_information_serving_time_title" />

                <TextView
                    android:id="@+id/textView_restaurant_default_information_serving_time_title"
                    style="@style/JejuLoadTextStyle.SubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_restaurant_default_information_serving_time"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/toggleButton_restaurant_default_information_flip"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_restaurant_default_information_serving_time"
                    style="@style/JejuLoadTextStyle.Focus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/restaurant_default_information_serving_time_margin_horizontal"
                    android:layout_marginTop="@dimen/restaurant_default_information_serving_time_margin_top"
                    android:visibility="@{isExpand ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_restaurant_default_information_serving_time_title"
                    tools:text="오늘 (11.21) 13:00 - 22:30" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_restaurant_default_information_serving_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="@{isExpand ? View.VISIBLE : View.GONE}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_restaurant_default_information_serving_time_title"
                    tools:visibility="gone" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/restaurant_default_information_divider_height"
                android:layout_marginHorizontal="@dimen/restaurant_default_information_divider_margin_horizontal"
                android:layout_marginTop="@dimen/restaurant_default_information_divider_margin_top"
                android:background="@android:color/darker_gray" />

            <TextView
                style="@style/JejuLoadTextStyle.SubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/restaurant_default_information_tips_margin_horizontal"
                android:layout_marginTop="@dimen/restaurant_default_information_tips_margin_top"
                android:text="@string/text_restaurant_default_information_tips"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_restaurant_default_information_tip"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="@dimen/restaurant_default_information_tip_container_margin_horizontal"
                android:orientation="vertical"
                android:textSize="18sp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_restaurant_default_information_tip" />
        </LinearLayout>
    </merge>
</layout>